--- a/WatchFun/src/main/resources/templates/Welcome.html
+++ b/WatchFun/src/main/resources/templates/Welcome.html
@@ -7,21 +7,21 @@
   <meta name="description" content="">
 <meta name="author" content="">
 
-<link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
-<link rel="apple-touch-icon" href="img/apple-touch-icon.png">
-<link rel="apple-touch-icon" sizes="72x72" href="img/apple-touch-icon-72x72.png">
-<link rel="apple-touch-icon" sizes="114x114" href="img/apple-touch-icon-114x114.png">
+<link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon">
+<link rel="apple-touch-icon" href="/img/apple-touch-icon.png">
+<link rel="apple-touch-icon" sizes="72x72" href="/img/apple-touch-icon-72x72.png">
+<link rel="apple-touch-icon" sizes="114x114" href="/img/apple-touch-icon-114x114.png">
 
 <!-- Bootstrap -->
-<link rel="stylesheet" type="text/css"  href="css/bootstrap.css">
-<link rel="stylesheet" type="text/css" href="fonts/font-awesome/css/font-awesome.css">
+<link rel="stylesheet" type="text/css"  href="/css/bootstrap.css"/>
+<link rel="stylesheet" type="text/css" href="/fonts/font-awesome/css/font-awesome.css"/>
 
 <!-- Stylesheet
     ================================================== -->
-<link rel="stylesheet" type="text/css"  href="css/style.css">
-<link rel="stylesheet" type="text/css" href="css/nivo-lightbox/nivo-lightbox.css">
-<link rel="stylesheet" type="text/css" href="css/nivo-lightbox/default.css">
-<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700,800,600,300' rel='stylesheet' type='text/css'>
+<link rel="stylesheet" type="text/css"  href="/css/style.css"/>
+<link rel="stylesheet" type="text/css" href="/css/nivo-lightbox/nivo-lightbox.css"/>
+<link rel="stylesheet" type="text/css" href="/css/nivo-lightbox/default.css"/>
+<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700,800,600,300' rel='stylesheet' type='text/css'/>
 <script type="text/javascript" src="js/modernizr.custom.js"></script>
 
 </head>
@@ -102,15 +102,15 @@
 
         <div class="col-sm-6 col-md-3 col-lg-3 "> 
           <div class="watchfun-item">
-            <div class="hover-bg"> <a th:href="@{~/save1}" th:title="${movie.name}" data-lightbox-gallery="gallery1">
+            <div class="hover-bg"> <a  th:href="@{'movie/'+${movie.id}}" th:title="${movie.name}" data-lightbox-gallery="gallery1">
               <div class="hover-text">
                 <h4 th:text="${movie.rating}"></h4>
               </div>
               <img  th:src="@{${movie.img}}" class="img-responsive" > </a> </div>
           </div>
           <!-- element button-->        
-          <ol class="dd">            
-            <li><a th:href="@{source/I-origin.torrent}" >Download113</a></li>
+          <ol class="downloadlink">            
+            <li><a th:href="@{${movie.downloadLink}}" >Download</a></li>
           </ol>      
           <!-- element button ends-->
         </div>
@@ -247,14 +247,14 @@
     </div>
   </div>
 </div>
-<script type="text/javascript" src="js/jquery.1.11.1.js"></script> 
-<script type="text/javascript" src="js/bootstrap.js"></script> 
-<script type="text/javascript" src="js/SmoothScroll.js"></script> 
-<script type="text/javascript" src="js/nivo-lightbox.js"></script> 
-<script type="text/javascript" src="js/jquery.isotope.js"></script> 
-<script type="text/javascript" src="js/jqBootstrapValidation.js"></script> 
-<script type="text/javascript" src="js/contact_me.js"></script> 
-<script type="text/javascript" src="js/main.js"></script>
+<script type="text/javascript" src="/js/jquery.1.11.1.js"></script> 
+<script type="text/javascript" src="/js/bootstrap.js"></script> 
+<script type="text/javascript" src="/js/SmoothScroll.js"></script> 
+<script type="text/javascript" src="/js/nivo-lightbox.js"></script> 
+<script type="text/javascript" src="/js/jquery.isotope.js"></script> 
+<script type="text/javascript" src="/js/jqBootstrapValidation.js"></script> 
+<script type="text/javascript" src="/js/contact_me.js"></script> 
+<script type="text/javascript" src="/js/main.js"></script>
 
 </body>
 </html>
