--- a/WatchFun/src/main/resources/static/css/style.css
+++ b/WatchFun/src/main/resources/static/css/style.css
@@ -6,6 +6,7 @@ body, html {
 	width: 100% !important;
 	height: 100% !important;
 }
+
 h2 {
 	margin: 0 0 20px 0;
 	color: #555;
@@ -14,32 +15,39 @@ h2 {
 	font-weight: 400;
 	font-size: 30px;
 }
+
 h3, h4 {
 	color: #222;
 	font-size: 18px;
 	font-weight: 300;
 	letter-spacing: 1px;
 }
+
 h5 {
 	text-transform: uppercase;
 	font-weight: 700;
 	line-height: 20px;
 }
+
 p.intro {
 	font-size: 16px;
 	margin: 12px 0 0;
 	line-height: 24px;
 }
+
 a {
 	color: #555;
 }
+
 a:hover, a:focus {
 	text-decoration: none;
 	color: #000;
 }
+
 ul, ol {
 	list-style: none;
 }
+
 .clearfix:after {
 	visibility: hidden;
 	display: block;
@@ -48,20 +56,25 @@ ul, ol {
 	clear: both;
 	height: 0;
 }
+
 .clearfix {
 	display: inline-block;
 }
+
 * html .clearfix {
 	height: 1%;
 }
+
 .clearfix {
 	display: block;
 }
+
 ul, ol {
 	padding: 0;
 	webkit-padding: 0;
 	moz-padding: 0;
 }
+
 hr {
 	height: 1px;
 	width: 70px;
@@ -76,19 +89,23 @@ hr {
 #nav {
 	z-index: 9999;
 }
+
 #nav.affix {
 	position: fixed;
 	top: 0;
 	width: 100%
 }
+
 .navbar .navbar-nav {
 	display: inline-block;
 	float: none;
 	vertical-align: top;
 }
+
 .navbar .navbar-collapse {
 	text-align: center;
 }
+
 .navbar-custom {
 	margin-bottom: 0;
 	background-color: #f6f6f6;
@@ -96,9 +113,11 @@ hr {
 	padding: 10px 0;
 	border-bottom: 2px solid #fff;
 }
+
 .navbar-custom a {
 	color: #555;
 }
+
 .navbar-custom .nav li a {
 	margin: 0 60px;
 	text-transform: uppercase;
@@ -107,25 +126,31 @@ hr {
 	-moz-transition: background .3s ease-in-out;
 	transition: background .3s ease-in-out;
 }
+
 .navbar-custom .nav li a:hover {
 	outline: 0;
 	color: #000;
 	background-color: transparent;
 }
+
 .navbar-custom .nav li a:focus, .navbar-custom .nav li a:active {
 	outline: 0;
 	background-color: transparent;
 	color: #000;
 }
+
 .navbar-custom .nav li.active {
 	outline: 0;
 }
+
 .navbar-custom .nav li.active a {
-	background-color: rgba(255,255,255,.3);
+	background-color: rgba(255, 255, 255, .3);
 }
+
 .navbar-custom .nav li.active a:hover {
 	color: #fff;
 }
+
 .btn-default {
 	text-transform: uppercase;
 	color: #555;
@@ -137,7 +162,9 @@ hr {
 	border-radius: 0;
 	margin-top: 20px;
 }
-.btn-default:hover, .btn-default:focus, .btn-default.focus, .btn-default:active, .btn-default.active {
+
+.btn-default:hover, .btn-default:focus, .btn-default.focus, .btn-default:active,
+	.btn-default.active {
 	color: #fff;
 	background-color: #121d1f;
 	border-color: #121d1f;
@@ -156,9 +183,11 @@ hr {
 	background-size: cover;
 	-o-background-size: cover;
 }
+
 .section-title.center {
 	padding: 10px 0 40px 0;
 }
+
 .intro h1 {
 	font-size: 60px;
 	font-weight: 600;
@@ -167,11 +196,13 @@ hr {
 	margin-bottom: 20px;
 	color: #333;
 }
+
 .intro p {
 	font-size: 20px;
 	margin-bottom: 40px;
 	margin-top: 20px;
 }
+
 header .intro-text {
 	padding-top: 200px;
 	padding-bottom: 200px;
@@ -180,16 +211,19 @@ header .intro-text {
 #about {
 	padding: 120px 0;
 }
+
 #about .about-text {
 	margin-left: 10px;
 	text-align: center;
 }
+
 #about img {
 	border-radius: 50%;
 	width: 160px;
 	height: 160px;
 	display: inline-block;
 }
+
 #about p {
 	margin-top: 40px;
 	margin-bottom: 30px;
@@ -200,49 +234,60 @@ header .intro-text {
 	padding: 120px 0;
 	background: #f6f6f6;
 }
+
 .categories {
 	padding-bottom: 30px;
 	text-align: center;
 }
+
 ul.cat li {
 	display: inline-block;
 }
+
 ol.type li {
 	display: inline-block;
 	margin-left: 20px;
 }
+
 ol.type li a {
 	border: 1px solid #777;
 	color: #555;
 	padding: 8px 20px;
 }
+
 ol.type li a.active {
 	background: #222;
 	border: 1px solid #222;
 	color: #fff;
 }
+
 ol.type li a:hover {
 	background: #222;
 	border: 1px solid #222;
 	color: #fff;
 }
+
 .isotope-item {
 	z-index: 2
 }
+
 .isotope-hidden.isotope-item {
 	z-index: 1
 }
+
 .isotope, .isotope .isotope-item {
 	/* change duration value to whatever you like */
 	-webkit-transition-duration: 0.8s;
 	-moz-transition-duration: 0.8s;
 	transition-duration: 0.8s;
 }
+
 .isotope-item {
 	margin-right: -1px;
 	-webkit-backface-visibility: hidden;
 	backface-visibility: hidden;
 }
+
 .isotope {
 	-webkit-backface-visibility: hidden;
 	backface-visibility: hidden;
@@ -250,6 +295,7 @@ ol.type li a:hover {
 	-moz-transition-property: height, width;
 	transition-property: height, width;
 }
+
 .isotope .isotope-item {
 	-webkit-backface-visibility: hidden;
 	backface-visibility: hidden;
@@ -257,7 +303,8 @@ ol.type li a:hover {
 	-moz-transition-property: -moz-transform, opacity;
 	transition-property: transform, opacity;
 }
-.watchfun-item {
+
+.watchfun-movie {
 	margin: 15px 0;
 	-webkit-transition: all 0.5s ease-out;
 	-moz-transition: all 0.5s ease-out;
@@ -265,18 +312,63 @@ ol.type li a:hover {
 	-o-transition: all 0.5s ease-out;
 	transition: all 0.5s ease-out;
 }
-.watchfun-item:hover {
+.watchfun-novel {
+	margin: 15px 0;
+	-webkit-transition: all 0.5s ease-out;
+	-moz-transition: all 0.5s ease-out;
+	-ms-transition: all 0.5s ease-out;
+	-o-transition: all 0.5s ease-out;
+	transition: all 0.5s ease-out;
+}
+.watchfun-tvseries {
+	margin: 15px 0;
+	-webkit-transition: all 0.5s ease-out;
+	-moz-transition: all 0.5s ease-out;
+	-ms-transition: all 0.5s ease-out;
+	-o-transition: all 0.5s ease-out;
+	transition: all 0.5s ease-out;
+}
+
+.watchfun-movie:hover {
 	-webkit-transform: scale(1.1);
 	-moz-transform: scale(1.1);
 	-ms-transform: scale(1.1);
 	-o-transform: scale(1.1);
 	transform: scale(1.1);
 }
-.watchfun-item .hover-bg {
+.watchfun-novel:hover {
+	-webkit-transform: scale(1.1);
+	-moz-transform: scale(1.1);
+	-ms-transform: scale(1.1);
+	-o-transform: scale(1.1);
+	transform: scale(1.1);
+}
+.watchfun-tvseries:hover {
+	-webkit-transform: scale(1.1);
+	-moz-transform: scale(1.1);
+	-ms-transform: scale(1.1);
+	-o-transform: scale(1.1);
+	transform: scale(1.1);
+}
+
+.watchfun-movie .hover-bg {
 	height: 195px;
 	overflow: hidden;
 	position: relative;
 }
+
+.watchfun-novel .hover-bg {
+	height: 195px;
+	overflow: hidden;
+	position: relative;
+}
+
+.watchfun-tvseries .hover-bg {
+	height: 195px;
+	overflow: hidden;
+	position: relative;
+}
+
 .hover-bg .hover-text {
 	position: absolute;
 	text-align: center;
@@ -289,6 +381,7 @@ ol.type li a:hover {
 	opacity: 0;
 	transition: all 0.5s;
 }
+
 .hover-bg .hover-text>h4 {
 	text-transform: uppercase;
 	opacity: 0;
@@ -297,27 +390,32 @@ ol.type li a:hover {
 	transform: translateY(100%);
 	transition: all 0.3s;
 }
+
 .hover-bg:hover .hover-text>h4 {
 	opacity: 1;
 	-webkit-backface-visibility: hidden;
 	-webkit-transform: translateY(0);
 	transform: translateY(0);
 }
+
 .hover-bg .hover-text>i {
 	opacity: 0;
 	-webkit-transform: translateY(0);
 	transform: translateY(0);
 	transition: all 0.3s;
 }
+
 .hover-bg:hover .hover-text>i {
 	opacity: 1;
 	-webkit-backface-visibility: hidden;
 	-webkit-transform: translateY(100%);
 	transform: translateY(100%);
 }
+
 .hover-bg:hover .hover-text {
 	opacity: 1;
 }
+
 #portfolio i.fa {
 	font-size: 20px;
 	padding: 5px;
@@ -327,25 +425,30 @@ ol.type li a:hover {
 #contact {
 	padding: 120px 0 60px 0;
 }
+
 #contact h3 {
 	padding-top: 20px;
 	font-size: 20px;
 	font-weight: 400;
 	color: #fff;
 }
+
 #contact form {
 	padding: 30px 0;
 }
+
 #contact .text-danger {
 	color: #E87E04;
 	text-align: left;
 }
+
 label {
 	font-size: 12px;
 	font-weight: 400;
 	font-family: 'Open Sans', sans-serif;
 	float: left;
 }
+
 #contact .form-control {
 	display: block;
 	width: 100%;
@@ -353,7 +456,7 @@ label {
 	font-size: 14px;
 	line-height: 1.42857143;
 	color: #2c3e50;
-	background-color: rgba(255,255,255,0.8);
+	background-color: rgba(255, 255, 255, 0.8);
 	background-image: none;
 	border: 1px solid #999;
 	border-radius: 0;
@@ -363,47 +466,59 @@ label {
 	-o-transition: none;
 	transition: none;
 }
+
 #contact .form-control:focus {
 	border-color: inherit;
 	outline: 0;
 	-webkit-box-shadow: transparent;
 	box-shadow: transparent;
 }
+
 .form-control::-webkit-input-placeholder {
-color: #2c3e50;
+	color: #2c3e50;
 }
+
 .form-control:-moz-placeholder {
-color: #2c3e50;
+	color: #2c3e50;
 }
+
 .form-control::-moz-placeholder {
-color: #2c3e50;
+	color: #2c3e50;
 }
+
 .form-control:-ms-input-placeholder {
-color: #2c3e50;
+	color: #2c3e50;
 }
+
 #contact .social {
 	margin-top: 80px;
 }
+
 #contact .social ul li {
 	display: inline-block;
 	margin: 0 20px;
 }
+
 #contact .social i.fa {
 	font-size: 22px;
 	padding: 4px;
 	color: #444;
 	transition: all 0.5s;
 }
+
 #contact .social i.fa:hover {
 	color: #000;
 }
+
 .btn:active, .btn.active {
 	background-image: none;
 	outline: 0;
 	-webkit-box-shadow: none;
 	box-shadow: none;
 }
-a:focus, .btn:focus, .btn:active:focus, .btn.active:focus, .btn.focus, .btn:active.focus, .btn.active.focus {
+
+a:focus, .btn:focus, .btn:active:focus, .btn.active:focus, .btn.focus,
+	.btn:active.focus, .btn.active.focus {
 	outline: none;
 	outline-offset: none;
 }
@@ -412,26 +527,26 @@ a:focus, .btn:focus, .btn:active:focus, .btn.active:focus, .btn.focus, .btn:acti
 	background: #f6f6f6;
 	color: #777;
 	padding: 30px 0 25px 0;
-	posotion:absolute;
-	bottom:0;
-	height:15%;
-	width:100%;
-	margin-bottom:0
-	
-}	
+	height: 15%;
+	width: 100%;
+	margin-bottom: 0;
+}
 
-.footerLocation{
-	position: absolute;
- bottom: 0;
- width: 100%;
+.footerLocation {
+	
+	bottom:0;
+	position:absolute;
+	width:100%;
 }
 
 #footer p {
 	font-size: 13px;
 }
+
 #footer a {
 	color: #555;
 }
+
 #footer a:hover {
 	color: #000;
 }
@@ -441,58 +556,56 @@ a:focus, .btn:focus, .btn:active:focus, .btn.active:focus, .btn.focus, .btn:acti
 	padding: 5px;
 	color: #E87E04;
 }
+
 #novels {
 	padding: 120px 0;
 	background: #f6f6f6;
 }
 
-
-
-<!--HARDIK -->
-
-
-
-ol.downloadlink li {
+<!--
+HARDIK -->ol.downloadlink li {
 	display: inline-block;
 	margin-left: 20px;
 }
+
 ol.downloadlink li a {
 	border: 1px solid #777;
 	color: #555;
 	padding: 8px 20px;
 }
+
 ol.downloadlink li a.active {
 	background: #222;
 	border: 1px solid #222;
 	color: #fff;
 }
+
 ol.downloadlink li a:hover {
 	background: #222;
 	border: 1px solid #222;
 	color: #fff;
 }
 
-
-
-
 ol.downloadButton li {
 	display: inline-block;
 	width: 100%;
 	margin-top: 15px;
 }
+
 ol.downloadButton li a {
 	border: 1px solid #777;
 	color: #555;
 	width: 100%;
 	padding: 8px 20px;
 }
-ol.downloadButton li a.active 
-{
+
+ol.downloadButton li a.active {
 	background: #222;
 	border: 1px solid #222;
 	color: #fff;
 	width: 100%;
 }
+
 ol.downloadButton li a:hover {
 	background: #222;
 	border: 1px solid #222;
@@ -500,101 +613,136 @@ ol.downloadButton li a:hover {
 	width: 100%;
 }
 
-.textAllign{
+.textAllign {
 	padding: 5px;
 }
 
-
-<!--headerSettings -->
-
-
-
-
-
-
-.headerList {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    height: 7%;
-    width: 100%;
-    background: #f6f6f6;
-
-	
+<!--
+headerSettings -->.headerList {
+	list-style-type: none;
+	margin: 0;
+	padding: 0;
+	overflow: hidden;
+	height: 7%;
+	width: 100%;
+	background: #f6f6f6;
 }
 
 .headerLogoItem {
-    float: left;
-    
-   
+	float: left;
 }
 
 .headerLogoItem a {
-    display: block;
-    color: #666;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
+	display: block;
+	color: #666;
+	text-align: center;
+	padding: 14px 16px;
+	text-decoration: none;
 }
 
-
-
 .headerLogoItem a.active {
-    color: white;
-    background-color: #4CAF50;
+	color: white;
+	background-color: #4CAF50;
 }
 
 ol.navbarIcon {
 	padding: 8px;
-
 }
 
 ol.navbarIcon li {
 	display: inline-block;
 	margin-left: 20px;
 }
+
 ol.navbarIcon li a {
 	color: #555;
 	padding: 8px 20px;
 	text-decoration: none;
 }
+
 ol.navbarIcon li a.active {
 	background: #222;
 	border: 1px solid #222;
 	color: #fff;
 	text-decorationation: none;
 }
+
 ol.navbarIcon li a:hover {
 	background: #222;
-	
 	color: #fff;
 	text-decoration: none;
 }
-.navbarIcon-logo{
- padding: 8px;
 
+.navbarIcon-logo {
+	padding: 8px;
 }
 
 .headerItem a {
-    display: block;
-    color: #666;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
+	display: block;
+	color: #666;
+	text-align: center;
+	padding: 14px 16px;
+	text-decoration: none;
 }
-
-
 
 .headerItem a.active {
-    color: white;
-    background-color: #4CAF50;
+	color: white;
+	background-color: #4CAF50;
 }
 
-.genreData{
-	margin-left:3%;
+.genreData {
+	margin-left: 3%;
 }
-.allData{
-	margin-left : 25%;
-	letter-spacing : 7px;
+
+.allData {
+	margin-left: 25%;
+	letter-spacing: 7px;
+}
+
+/*  BROWSE DROPDOWN*/
+.dropbtn {
+	background : transparent;
+	padding: 8px 20px;
+	text-decoration: none;
+	border: none;
+	cursor: pointer;
+}
+
+.dropdown {
+	position: relative;
+	display: inline-block;
+}
+
+.dropdown-content {
+	display: none;
+	position: absolute;
+	background-color: #f9f9f9;
+	min-width: 160px;
+	box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+	z-index: 1;
+}
+
+.dropdown-content a {
+	color: black;
+	padding: 12px 16px;
+	text-decoration: none;
+	display: block;
+}
+
+.dropdown-content a:hover {
+	background-color: #f1f1f1
+}
+
+.dropdown:hover .dropdown-content {
+	display: block;
+}
+
+/* error image setting */
+.errorImgSetting {
+	margin-left: 30%;
+}
+
+.errorImg {
+	max-width: 100%;
+	max-height: 700px;
 }
